fix some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ body {
 #infoarea {
   border: 3px black solid;
   position: absolute;
-  bottom: 10px;
+  top: 200px;
 }
 
 .show {
